--- a/docs/api-reference/platform/authentication.mdx
+++ b/docs/api-reference/platform/authentication.mdx
@@ -4,21 +4,21 @@ Platform API is meant to be used by external applications to perform operations 
 
 To generate a valid token for the Platform API, you'll first need to create an application inside Spree.
 
-1.  Go to Spree's admin panel and open `Apps` -> `oAuth Applications` in the menu&#x20;
+1. Go to Spree's admin panel and open `Apps` -> `oAuth Applications` in the menu&#x20;
 
-    <figure><img src="/images/Platform API 1.png" alt=""><figcaption></figcaption></figure>
+    <img src="/images/Platform API 1.png"/>
 
-2.  Click on `New oAuth Application`
+2. Click on `New oAuth Application`
 
-    <figure><img src="/images/Platform API 2.png" alt=""><figcaption></figcaption></figure>
+    <img src="/images/Platform API 2.png"/>
 
-3.  Give your application a name and click `Create`
+3. Give your application a name and click `Create`
 
-    <figure><img src="/images/Platform API 3.png" alt=""><figcaption></figcaption></figure>
+    <img src="/images/Platform API 3.png"/>
 
-4.  Save your Client ID and Secret - you'll later use it to generate a OAuth token to access the platform API
+4. Save your Client ID and Secret - you'll later use it to generate a OAuth token to access the platform API
 
-    <figure><img src="/images/Platform API 4.png" alt=""><figcaption></figcaption></figure>
+    <img src="/images/Platform API 4.png"/>
 
 ### Generating OAuth token
 
