--- a/docs/developer/internals/stores.mdx
+++ b/docs/developer/internals/stores.mdx
@@ -14,7 +14,7 @@ The `Spree::Store` model is the center of the Spree ecosystem. Each Spree instal
 * Store B, `eu.example.com`
 * Store C, `another-brand.com`
 
-![](..//images/mulit\_store\_978x2.png)
+![](/images//mulit\_store\_978x2.png)
 
 ## `current_store` method
 
