--- a/docs/user-guide/configuration/store-order-notifications.mdx
+++ b/docs/user-guide/configuration/store-order-notifications.mdx
@@ -8,11 +8,11 @@ As a store owner, you may wish to receive an email notification each time your s
 
 To find your store’s **Order Notifications** settings, click on the **Configuration** dropdown and then click **Stores**. Find the store you’re looking for and click the **Edit** button.
 
-![](..//images/zrzut-ekranu-2021-08-20-000659.jpg)
+![](/images//zrzut-ekranu-2021-08-20-000659.jpg)
 
 Scroll down to the **Emails** category and add your desired email address to the field labeled **New Order Notifications Email**.
 
-![Admin: Store Emails Group](..//images/image%20%2852%29.png)
+![Admin: Store Emails Group](/images//image%20%2852%29.png)
 
 Click the **Update** button at the bottom of the page and you’re all set!
 
