--- a/docs/user-guide/configuration/taxes.mdx
+++ b/docs/user-guide/configuration/taxes.mdx
@@ -21,19 +21,19 @@ Tax Categories is Spree’s way of grouping products that are taxed in the same 
 
 To access your store’s existing Tax Categories, go to your Admin Interface and click “Configuration” then “Tax Categories”.
 
-![Tax Categories](..//images/image%20%2818%29.png)
+![Tax Categories](/images//image%20%2818%29.png)
 
 You can edit existing Tax Categories by clicking the “Edit” icon next to each category in the list.
 
-![Edit Tax Category Link](..//images/image%20%2814%29.png)
+![Edit Tax Category Link](/images//image%20%2814%29.png)
 
 You can also remove a Tax Category by clicking the “Delete” icon next to the category, then clicking “OK” to confirm.
 
-![Delete Tax Category Link](..//images/image%20%2817%29.png)
+![Delete Tax Category Link](/images//image%20%2817%29.png)
 
 To create a new Tax Category, click the “New Tax Category” button.
 
-![New Tax Category Form](..//images/image%20%2816%29.png)
+![New Tax Category Form](/images//image%20%2816%29.png)
 
 You supply a name, an optional description, and whether or not this is the default tax category for this store.
 
@@ -49,11 +49,11 @@ Tax rates are how it all comes together. A product with a given [Tax Category](t
 
 To add a new Tax Rate, go to your Admin Interface and click “Configuration” then “Tax Rates”.
 
-![Tax Rates](..//images/image%20%28128%29.png)
+![Tax Rates](/images//image%20%28128%29.png)
 
 Here, you can see all of your existing tax rates and how they are configured. To create a new tax rate, click the “New Tax Rate” button.
 
-![New Tax Rate](..//images/image%20%289%29.png)
+![New Tax Rate](/images//image%20%289%29.png)
 
 * **Name** - Give your new tax rate a meaningful name \(like “Taxable US Goods”, for example\)
 * **Zone** - You’ll need to make separate tax rates for each zone you serve, per category. Suppose you have a “Clothing” tax category, and you sell to both the US and Europe; you’ll need to make two different tax rates, one for the US zone, and one for the European zone.
@@ -67,7 +67,7 @@ Here, you can see all of your existing tax rates and how they are configured. To
 
 Finally, European stores will benefit from the Tax Settings page.
 
-![Tax Settings](..//images/image%20%2815%29.png)
+![Tax Settings](/images//image%20%2815%29.png)
 
 When this option is checked, your Spree site will take it as a default [tax category](taxes.md#tax-categories), find the corresponding [tax rate](taxes.md#tax-rates), and multiply it by the shipping rate for each available [shipping method](../shipments/shipping-methods.md) offered to a customer during checkout.
 
