--- a/docs/user-guide/content-management/add-items-to-a-menu.mdx
+++ b/docs/user-guide/content-management/add-items-to-a-menu.mdx
@@ -6,7 +6,7 @@ This part of the guide assumes you have created a menu and are now ready to add 
 
 
 
-![Menu Items Area](..//images/image%20%284%29%20%281%29.png)
+![Menu Items Area](/images//image%20%284%29%20%281%29.png)
 
 To get start adding items to your menu click the Add New Menu Item button found in the top right of the Menu Item Area; once clicked, you will be taken to the New Menu Item page shown in the image below.
 
@@ -14,7 +14,7 @@ You will be presented with three panels, **Settings**, **Public Details** and **
 
 
 
-![New Menu Item Page](..//images/image%20%285%29.png)
+![New Menu Item Page](/images//image%20%285%29.png)
 
 ## [Settings Panel](add-items-to-a-menu.md#settings-panel) <a id="settings-panel"></a>
 
@@ -32,7 +32,7 @@ The image below shows how the Spree Main Menu uses two containers, one outlined 
 
 For more information on using the Spree Main Menu visit the [Building The Main Menu](building-the-main-menu.md) page.
 
-![Contianers With Code](..//images/image%20%2855%29.png)
+![Contianers With Code](/images//image%20%2855%29.png)
 
 ### [Nest Under](add-items-to-a-menu.md#nest-under) <a id="nest-under"></a>
 
@@ -66,7 +66,7 @@ You can enter a URL to an external website such as `https://example.com`. Link t
 
 To change the **Link To** option, you will need to select the link you desire, then click **Update** as prompted to load the appropriate link credentials.
 
-![Change Link To Type](..//images/image.png)
+![Change Link To Type](/images//image.png)
 
 ### [Taxon / Product](add-items-to-a-menu.md#taxon-product) <a id="taxon-product"></a>
 
@@ -74,7 +74,7 @@ To link to a Taxon or Product, select the desired item from the _Link To_ select
 
 You will then be presented with a search box that allows you to search for the Taxon or Product you wish to link to. Once set, click **Update**, and the path to item will be displayed under the search field.
 
-![Link To Sportsware Taxon Set](..//images/image%20%2857%29.png)
+![Link To Sportsware Taxon Set](/images//image%20%2857%29.png)
 
 ### [Home Page](add-items-to-a-menu.md#home-page) <a id="home-page"></a>
 
