--- a/docs/user-guide/content-management/building-the-main-menu.mdx
+++ b/docs/user-guide/content-management/building-the-main-menu.mdx
@@ -15,7 +15,7 @@ If this is not the case please visit the [Create A Menu](https://app.gitbook.com
 
 In the image below you can see that we named our menu item Women and linked to the Women taxon, and the menu item is a link.
 
-![Menu Items Area](..//images/image%20%283%29.png)
+![Menu Items Area](/images//image%20%283%29.png)
 
 #### [Add The Category & Promotions Container](building-the-main-menu.md#add-the-category-promotions-container) <a id="add-the-category-promotions-container"></a>
 
@@ -27,7 +27,7 @@ The promotions container used in the Spree mega menu is exactly the same as the 
 
 In the image below you can see we now have two containers nested under the Women link that we created earlier, we named our containers **Categories** and **Promotions**, they are of the type container and have the appropriate codes.
 
-![Menu Items Area](..//images/image%20%2858%29.png)
+![Menu Items Area](/images//image%20%2858%29.png)
 
 ### [Adding Links To Containers](building-the-main-menu.md#adding-links-to-containers) <a id="adding-links-to-containers"></a>
 
@@ -39,5 +39,5 @@ Adding a link under the categories container is just a case of creating a new me
 
 Adding a promotion link under the Promotions container is just as easy as adding the link under the Categories container. The only difference is we are nesting this new link under the Promotions container, and using the **Name** to set the banner name **Subtitle** to set the banner subtitle and Image field to add our promo image.
 
-![Menu Items Area](..//images/image%20%2856%29.png)
+![Menu Items Area](/images//image%20%2856%29.png)
 
