--- a/docs/user-guide/orders/editing-an-order.mdx
+++ b/docs/user-guide/orders/editing-an-order.mdx
@@ -13,11 +13,11 @@ There will be times when you need to edit orders that are placed in your store. 
 
 First, go to your Admin Interface. Click the “Orders” tab, and [locate the order](searching-orders.md) you want to change.
 
-![Edit Order Link](..//images/image%20%2860%29.png)
+![Edit Order Link](/images//image%20%2860%29.png)
 
 This will bring up the order edit page:
 
-![Order Edit Page](..//images/image%20%2859%29.png)
+![Order Edit Page](/images//image%20%2859%29.png)
 
 You can change any of the following components of an order from here:
 
