--- a/docs/user-guide/orders/searching-orders.mdx
+++ b/docs/user-guide/orders/searching-orders.mdx
@@ -2,7 +2,7 @@
 
 When you click the **Orders** tab on the Admin Interface, you are instantly presented with a summary of the most recent orders your store has received.
 
-![Initial List of Orders](..//images/image%20%2895%29.png)
+![Initial List of Orders](/images//image%20%2895%29.png)
 
 The list shows you the following information about each order:
 
@@ -20,7 +20,7 @@ Next to each row is an “Edit” icon. Clicking this icon allows you to [make c
 
 You may not always want to see all of the most recent orders, as is the Spree default. You might want to view only those orders that you need to pack and ship, or only those from a particular customer. Spree gives you the flexibility to quickly find the specific orders you need.
 
-![Order Filter Options](..//images/image%20%2891%29.png)
+![Order Filter Options](/images//image%20%2891%29.png)
 
 You can choose one or more of the following options to narrow your order search, then click the **Filter Results** button to update the results.
 
