--- a/docs/user-guide/payments/payment-methods.mdx
+++ b/docs/user-guide/payments/payment-methods.mdx
@@ -36,7 +36,7 @@ To configure one of the supported payment gateways, you must first install the [
 
 
 
-![](..//images/zrzut-ekranu-2021-08-19-161951.jpg)
+![](/images//zrzut-ekranu-2021-08-19-161951.jpg)
 
 If you installed the [Spree Gateway](https://github.com/spree/spree\_gateway) extension, you will see a long list of gateways in the “Provider” drop down menu. Select the one that you would like to add.
 
@@ -80,7 +80,7 @@ It is possible to add a new payment gateway that is not included on the supporte
 
 To edit the configuration settings for an existing payment method, go to the Admin Interface, click the “Configuration” tab, and then click the “Payment Methods” link. Find the payment method that you would like to edit on the list that appears. Click the “Edit” icon next to the payment method to edit its settings.
 
-![](..//images/zrzut-ekranu-2021-08-19-162218.jpg)
+![](/images//zrzut-ekranu-2021-08-19-162218.jpg)
 
 Make the desired changes to the payment method settings and then click “Update” to save them.
 
