--- a/docs/user-guide/payments/payment-states.mdx
+++ b/docs/user-guide/payments/payment-states.mdx
@@ -17,13 +17,13 @@ The possible payment states are:
 
 Payment does not necessarily go through each of these states in sequential order as illustrated below:
 
-![](..//images/payment_flow.jpg)
+![](/images//payment_flow.jpg)
 
 You can determine the payment state for a particular order by going to the Admin Interface and clicking on the “Orders” tab. Find the order you want to look up and click on it. Then click on the “Payments” link.
 
 
 
-![](..//images/zrzut-ekranu-2021-08-19-135155.jpg)
+![](/images//zrzut-ekranu-2021-08-19-135155.jpg)
 
 The details for the payment will appear. The “Payment State” column will display one of the possible payment states listed above.
 
