--- a/docs/user-guide/products/deleting-products.mdx
+++ b/docs/user-guide/products/deleting-products.mdx
@@ -4,7 +4,7 @@
 
 To delete a product in your store, go into the Admin Interface and click the “Products” tab. A list of your store’s product inventory will appear. Find the product that you would like to delete and click the “Delete” icon on the right to remove it from your store.
 
-![Deleting a Product](..//images/del.png)
+![Deleting a Product](/images//del.png)
 
 A message will appear asking you to confirm that you want to delete the product. Click “OK”.
 
