--- a/docs/user-guide/products/products-description.mdx
+++ b/docs/user-guide/products/products-description.mdx
@@ -6,7 +6,7 @@ From your store’s Admin Interface, you can manage all of the common tasks asso
 \
 
 
-![Products Admin](<..//images/prod1 (1).png>)
+![Products Admin](</images//prod1 (1).png>)
 
 From here you can:
 
