--- a/docs/user-guide/products/prototypes.mdx
+++ b/docs/user-guide/products/prototypes.mdx
@@ -12,21 +12,21 @@ This guide presumes you have already created the [Option Types](product-options.
 
 To create a prototype, go to the Admin Interface and click “Products”, then “Prototypes”. Click the “New Prototype” button.
 
-![New Prototype Form](..//images/image%20%28100%29.png)
+![New Prototype Form](/images//image%20%28100%29.png)
 
 Input a value for the “Name” field \(such as “Picture Frames”\), and choose the properties and options you want to associate with this type of product.
 
-![Filled-In Prototype Form](..//images/image%20%2880%29.png)
+![Filled-In Prototype Form](/images//image%20%2880%29.png)
 
 Click the “Create” button. You should now see your new prototype in the “Prototypes” list.
 
-![Prototypes List](..//images/image%20%2884%29.png)
+![Prototypes List](/images//image%20%2884%29.png)
 
 ## [Using a Prototype to Create Products](prototypes.md#using-a-prototype-to-create-products) <a id="using-a-prototype-to-create-products"></a>
 
 To create a new product based on the new prototype, click “Products” from the Admin Interface, then click the “New Product” button. Select “Picture Frames” from the “Prototypes” drop-down menu.
 
-![Product From Prototype](..//images/image%20%28105%29.png)
+![Product From Prototype](/images//image%20%28105%29.png)
 
 When you do so, the Spree system shows you values for both of the Option Types you entered, so that it can automatically create [Product Variants](creating-a-new-product.md#understanding-variants) for each of them.
 
@@ -34,7 +34,7 @@ Let’s create the Product and all Variants for the fictional “Hinkledink Pict
 
 Clicking the box next to an Option Type title will automatically check all of its Option Values for you.
 
-![Prototype Option Types](..//images/image2%20%281%29.png)
+![Prototype Option Types](/images//image2%20%281%29.png)
 
 Proceed with [creating the product](creating-a-new-product.md) as you would normally, adding any missing fields not supplied by the prototype.
 
