--- a/docs/user-guide/products/searching-products.mdx
+++ b/docs/user-guide/products/searching-products.mdx
@@ -17,7 +17,7 @@ Next to each product there are 3 buttons.
 * **Clone** - Allows you to make a [duplicate of the product](cloning-products.md).
 * **Delete** - Allows you to [delete the product](deleting-products.md).
 
-![Product Search](..//images/image2%20%283%29.png)
+![Product Search](/images//image2%20%283%29.png)
 
 ### [Filtering products](searching-products.md#filtering-products) <a id="filtering-products"></a>
 
@@ -25,7 +25,7 @@ You may not always want to see every product in the store, as is the Spree defau
 
 You can choose one or more of the following options to narrow your product search, then click the **Filter** button to extend filter options in the dropdown menu.
 
-![Filter products](..//images/image2%20%285%29.png)
+![Filter products](/images//image2%20%285%29.png)
 
 * **Name** - You can filter a particular product by its name.
 * **SKU** - Every time you create a product you may want to assign an SKU Number to make a search much faster and simplify shipping flow. You can use that number to search for the product.
