--- a/docs/user-guide/configuration/inventory.mdx
+++ b/docs/user-guide/configuration/inventory.mdx
@@ -16,7 +16,7 @@ To reach the Stock Locations management panel, go to your Admin Interface, click
 
 To add a stock location to your store, click the “New Stock Location” button.
 
-![New Stock Location](<..//images/image (8).png>)
+![New Stock Location](</images//image (8).png>)
 
 Here, you can input everything of relevance about your stock location: name, address, and phone are the most obvious. The three checkboxes on the right-hand side merit more explanation:
 
@@ -30,7 +30,7 @@ Input the values for all of the fields, and click “Create” to add your new s
 
 To edit a stock location, click the “Edit” icon next to it in the Stock Locations list.
 
-![Edit Stock Location Icon](<..//images/image (124).png>)
+![Edit Stock Location Icon](</images//image (124).png>)
 
 Make the desired changes in the form and click “Update”.
 
@@ -38,7 +38,7 @@ Make the desired changes in the form and click “Update”.
 
 To remove a stock location, click the “Delete” icon next to it in the Stock Locations list.
 
-![Delete Stock Location Icon](<..//images/image (125).png>)
+![Delete Stock Location Icon](</images//image (125).png>)
 
 Click “OK” to confirm the deletion.
 
@@ -46,7 +46,7 @@ Click “OK” to confirm the deletion.
 
 Note the “Stock Movements” link on the Stock Locations list.
 
-![Stock Movements Link](<..//images/image (130).png>)
+![Stock Movements Link](</images//image (130).png>)
 
 Clicking this link will show you all of the stock movements that have taken place for this stock location, both positive and negative.
 
@@ -58,7 +58,7 @@ If you have more than one stock location, your Spree store offers you a way to r
 
 To create a new stock transfer, go to your Admin Interface, click “Configuration”, followed by “Stock Transfers”, then click the “New Stock Transfer” button.
 
-![New Stock Transfer](<..//images/image (6).png>)
+![New Stock Transfer](</images//image (6).png>)
 
 You can enter an optional Reference Number that can correlate to a PO number, a transfer request number, a tracking number, or any other identifier you wish to use.
 
@@ -66,7 +66,7 @@ Next, select your Source and Destination stock locations. If you are receiving s
 
 Select a product variant from the “Variant” drop-down list and enter the quantity of the product being transferred. Click the “Add” button.
 
-![Stock Transfer Readied](<..//images/image (7).png>)
+![Stock Transfer Readied](</images//image (7).png>)
 
 {% hint style="danger" %}
 If you try to transfer an item that you do not have in stock at your Source location, the Spree system will record a stock transfer with a quantity of 0.
@@ -74,8 +74,8 @@ If you try to transfer an item that you do not have in stock at your Source loca
 
 The new stock transfer is readied. Once you have added all of the items you want to transfer, click the “Transfer Stock” button.
 
-![Stock Transfer Complete](<..//images/image (131).png>)
+![Stock Transfer Complete](</images//image (131).png>)
 
 Now, when you look at the [Stock Movements](inventory.md#stock-movements) for each of the stock locations, you see that there are two new entries that correspond to the stock transfer, both with a system-assigned “Action” number (actually, the ID for the stock transfer).
 
-![Resulting Stock Movements](<..//images/image (132).png>)
+![Resulting Stock Movements](</images//image (132).png>)
