--- a/docs/user-guide/configuration/reimbursement-types.mdx
+++ b/docs/user-guide/configuration/reimbursement-types.mdx
@@ -8,19 +8,19 @@ To make it easier for you when you need to make a reimbursement, there are vario
 
 You simply open the **Configuration** tab and press **Reimbursement Types**. Now, you can see all previously set up types, with the possibility to add a new one.
 
-![Reimbursement types](..//images/image%20%2836%29.png)
+![Reimbursement types](/images//image%20%2836%29.png)
 
 To add New Reimbursement Type, press the **Add New Reimbursement Type** button which is placed in the upper right corner.
 
-![Add Reimbursement Types](..//images/image%20%2826%29.png)
+![Add Reimbursement Types](/images//image%20%2826%29.png)
 
 You now only have to add a name and choose the type that you would like to have in your store.
 
-![Add Reimbursement Types inside](..//images/image%20%2828%29.png)
+![Add Reimbursement Types inside](/images//image%20%2828%29.png)
 
 The type is created via backend work and we’re at your service to make it easy. This option defines what kind of return to give to the user, such as a credit card refund or an exchange for a new item.
 
-![Reimbursement Types dropdown](..//images/image%20%2844%29.png)
+![Reimbursement Types dropdown](/images//image%20%2844%29.png)
 
 Now simply check the **Active** checkbox and press the **Create** button to create a brand new reimbursement type in your shop!
 
@@ -28,9 +28,9 @@ Now simply check the **Active** checkbox and press the **Create** button to crea
 
 Once you have created a type that you would like to edit, you can press the **Edit Icon** on the right side of the type’s name.
 
-![Reimbursement Edit Icon](..//images/image%20%2827%29.png)
+![Reimbursement Edit Icon](/images//image%20%2827%29.png)
 
 To delete, press the **Delete Icon** next to the **Edit Icon**.
 
-![Reimbursement Delete Icon](..//images/image%20%2824%29.png)
+![Reimbursement Delete Icon](/images//image%20%2824%29.png)
 
