--- a/docs/user-guide/products/cloning-products.mdx
+++ b/docs/user-guide/products/cloning-products.mdx
@@ -5,11 +5,11 @@
 To clone a product in your store, go into the Admin Interface and click the “Products” tab. A list of your store’s product inventory will appear. Find the product that you would like to clone and click the “Clone” icon to make a copy of it.\
 
 
-![Cloning a Product](<..//images/clo1 (1).png>)
+![Cloning a Product](</images//clo1 (1).png>)
 
 This operation will redirect you to a created copy of the product, it will also now appear in your product listing feed in the admin panel as “COPY OF” with the product name appended afterward. A new permalink and SKU will also be created for the product.
 
-![Clonned Product Example](..//images/clo2.png)
+![Clonned Product Example](/images//clo2.png)
 
 ### [Editing](cloning-products.md#editing) <a href="#editing" id="editing"></a>
 
@@ -22,4 +22,4 @@ Be very careful in assigning arbitrary permalinks, so that you don't accidentall
 You can edit the information associated with a cloned product just like you would for any other product. To do this, click on the product from your inventory list. In the “Name” field, delete the “COPY OF” text. To modify the permalink name, enter your desired value in the “Permalink” field. To modify the product SKU, enter your desired value in the “SKU” field. Once you’ve made your changes, scroll to the bottom of the page and click “Update”.\
 
 
-![Editing a Cloned Product](..//images/clo3.png)
+![Editing a Cloned Product](/images//clo3.png)
