--- a/docs/user-guide/products/creating-a-new-product.mdx
+++ b/docs/user-guide/products/creating-a-new-product.mdx
@@ -4,7 +4,7 @@
 
 To create a new product for your store, go into the Admin Interface, click the “Products” tab, and click the “New Product” button.
 
-![New Product Entry Form](..//images/cre1.png)
+![New Product Entry Form](/images//cre1.png)
 
 The three mandatory fields \(“Name”, “Master Price”, and “Shipping Categories”\) are denoted with an asterisk \(\*\) next to the label. You can leave SKU blank. If you don’t add a value for “Available On” the product will not be shown in your store.
 
@@ -14,7 +14,7 @@ The three mandatory fields \(“Name”, “Master Price”, and “Shipping Cat
 
 After you click the “Create” button, the Spree application brings you to a more detailed product entry page, where you can input more information about your new product.§
 
-![Product Edit Form](..//images/cre2.png)
+![Product Edit Form](/images//cre2.png)
 
 * **Name** - This field will either be blank, or the same as what you entered on the initial page. You can change this field whenever you like.
 * **Slug/Permalink** - The permalink is automatically created by the application for you when the product is first saved. It is based on the product’s name. This is what is appended to the end of a URL when someone visits the page for a particular product. You can change the permalink, but should exercise extreme caution in doing so to avoid naming collisions with other products in your database.
