--- a/docs/user-guide/products/editing-products.mdx
+++ b/docs/user-guide/products/editing-products.mdx
@@ -8,7 +8,7 @@ You will often need to modify the products in your store; for example, prices ma
 
 To make changes to your product, go to your Admin Interface, click the “Products” tab, and click the “Edit” icon next to the product.
 
-![Edit Product Link](..//images/image2.png)
+![Edit Product Link](/images//image2.png)
 
 The edit form is the exact same one you use when [creating products](creating-a-new-product.md). See that guide for explanation of any of the fields used when editing your product.
 
