--- a/docs/user-guide/products/taxonomies-and-taxons.mdx
+++ b/docs/user-guide/products/taxonomies-and-taxons.mdx
@@ -4,7 +4,7 @@
 
 Taxonomies are the Spree system’s approach to category trees. The heading of a tree is called a _Taxonomy_. Any child branches are called _Taxons_. Taxons themselves can have their own branches, meaning you could have something like the following categories structure:
 
-![Taxonomy Tree](<..//images/image (81).png>)
+![Taxonomy Tree](</images//image (81).png>)
 
 In this example, “Categories” is the name of the Taxonomy. It has three child branches: “Luggage”, “Housewares”, and “Clothing”. The last two branches each have three of their own child branches. Thus, “Clothing” is a child taxon to “Categories” and a parent taxon to “Men’s”.
 
@@ -14,7 +14,7 @@ To reach the Taxonomies list, first go to your Admin Interface, then click “Co
 
 To create a new taxonomy, click the “New Taxonomy” button. Enter a name for the taxonomy and click “Create”.
 
-![New Taxonomy](<..//images/image (118).png>)
+![New Taxonomy](</images//image (118).png>)
 
 You can then [add child taxons](taxonomies-and-taxons.md#adding-a-taxon-to-a-taxonomy) to your new taxonomy.
 
@@ -22,7 +22,7 @@ You can then [add child taxons](taxonomies-and-taxons.md#adding-a-taxon-to-a-tax
 
 To edit an existing taxonomy, click the “Edit” icon next to the name in the Taxonomies list.
 
-![Edit Taxonomy Icon](<..//images/image (112).png>)
+![Edit Taxonomy Icon](</images//image (112).png>)
 
 Here, you can change the name of the Taxonomy. You can also [reorder the child taxons](taxonomies-and-taxons.md#reorder-a-taxon), [delete a taxon](taxonomies-and-taxons.md#delete-a-taxon), [add a new taxon](taxonomies-and-taxons.md#adding-a-taxon-to-a-taxonomy), or [edit a taxon](taxonomies-and-taxons.md#edit-a-taxon). Make your changes, then click the Update button.
 
@@ -30,7 +30,7 @@ Here, you can change the name of the Taxonomy. You can also [reorder the child t
 
 ### [Delete a Taxonomy](taxonomies-and-taxons.md#delete-a-taxonomy) <a href="#delete-a-taxonomy" id="delete-a-taxonomy"></a>
 
-![Delete Taxonomy Icon](<..//images/image (117).png>)
+![Delete Taxonomy Icon](</images//image (117).png>)
 
 To delete a taxonomy, click the “Delete” icon next to the name in the Taxonomies list. Click “OK” to confirm.
 
@@ -38,13 +38,13 @@ To delete a taxonomy, click the “Delete” icon next to the name in the Taxono
 
 Once you have created a taxonomy, you may want to add child taxons to it. To do this, right-click the name of the Taxonomy, and click “Add”.
 
-![Add Taxon to Taxonomy](<..//images/image (119).png>)
+![Add Taxon to Taxonomy](</images//image (119).png>)
 
 ![Add Taxon to Taxonomy](https://guides.spreecommerce.org/static/2da0c21126242316ab424d4235fcc47b/ea4c8/add\_taxon\_to\_taxonomy.jpg)
 
 This will cause a new input field to open up, with “New node” in it. Replace this text with the name of your new taxon, and hit Enter. You’ll now see the child tax in the taxonomy tree.
 
-![New Taxon](<..//images/image (121).png>)
+![New Taxon](</images//image (121).png>)
 
 Click “Update” to save your addition.
 
@@ -52,11 +52,11 @@ Click “Update” to save your addition.
 
 If your site needs sub-trees, just add taxons to other taxons. To do so, right-click the name of what will become the parent taxon and then click “Add”.
 
-![Add Taxon to Another Taxon](<..//images/image (115).png>)
+![Add Taxon to Another Taxon](</images//image (115).png>)
 
 Enter the name of the child taxon and click enter. Repeat this process for any sub-trees you need.
 
-![Complex Taxonomy Tree](<..//images/image (120).png>)
+![Complex Taxonomy Tree](</images//image (120).png>)
 
 Remember to save your changes by clicking the “Update” button after you have added any taxons.
 
@@ -68,11 +68,11 @@ Taxons are displayed, by default, in the order in which you add them. To reorder
 
 Let’s assume, for example, that we want the “Children’s” taxon to be listed first, above “Women’s” and “Men’s”. Just drag and drop the taxon to its new location.
 
-![Reordering Taxons](<..//images/image (122).png>)
+![Reordering Taxons](</images//image (122).png>)
 
 You can even drag a parent taxon into the tree of a different parent taxon, merging it into the second taxon’s sub-tree.
 
-![Parent-to-Parent Taxon Merge](<..//images/image (108).png>)
+![Parent-to-Parent Taxon Merge](</images//image (108).png>)
 
 ### [Edit a Taxon](taxonomies-and-taxons.md#edit-a-taxon) <a href="#edit-a-taxon" id="edit-a-taxon"></a>
 
@@ -80,7 +80,7 @@ To edit a taxon’s name, just right-click it and select “Edit”.
 
 
 
-![Edit Taxon Form](<..//images/image (113).png>)
+![Edit Taxon Form](</images//image (113).png>)
 
 Here, you can edit several aspects of the taxon:
 
